[gd_scene load_steps=5 format=3 uid="uid://giysc6pogwms"]

[ext_resource type="Script" uid="uid://bs88sexjql8lf" path="res://scripts/main_menu.gd" id="1_yqorp"]
[ext_resource type="Texture2D" uid="uid://bjltmuwso2i6m" path="res://assets/sprites/items/bone_soup_seasoned.png" id="2_ow34m"]
[ext_resource type="Texture2D" uid="uid://o7a7o3jwf5w8" path="res://assets/sprites/items/knife.png" id="3_l72w3"]
[ext_resource type="Texture2D" uid="uid://c2sukvu8j77t" path="res://assets/sprites/items/bone.png" id="4_826wr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1158.0
offset_bottom = 656.0
script = ExtResource("1_yqorp")

[node name="ButtonManager" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -234.0
offset_right = 140.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="ButtonManager"]
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="ButtonManager"]
layout_mode = 2
max_value = 2.0
value = 1.0
ticks_position = 3

[node name="Container" type="Container" parent="ButtonManager"]
custom_minimum_size = Vector2(0, 34.835)
layout_mode = 2

[node name="StartButton" type="Button" parent="ButtonManager"]
custom_minimum_size = Vector2(200, 54)
layout_mode = 2
size_flags_vertical = 4
text = "Start"

[node name="TutorialButton" type="Button" parent="ButtonManager"]
custom_minimum_size = Vector2(200, 54)
layout_mode = 2
size_flags_vertical = 4
text = "Tutorial"

[node name="QuitButton" type="Button" parent="ButtonManager"]
custom_minimum_size = Vector2(200, 54)
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 466.0
offset_top = 65.0
offset_right = 660.0
offset_bottom = 259.0
texture = ExtResource("2_ow34m")

[node name="TextureRect3" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = 106.0
offset_top = 63.0
offset_right = 300.0
offset_bottom = 257.0
texture = ExtResource("3_l72w3")

[node name="TextureRect2" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = -83.0
offset_top = 45.0
offset_right = 111.0
offset_bottom = 239.0
texture = ExtResource("4_826wr")
flip_h = true

[connection signal="value_changed" from="ButtonManager/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ButtonManager/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonManager/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="ButtonManager/QuitButton" to="." method="_on_quit_button_pressed"]
